Fix for initialize device menu item that would not work if no device was already connected

--- a/MagicStickUI/MagicStickUI/MainWindow.xaml
+++ b/MagicStickUI/MagicStickUI/MainWindow.xaml
@@ -104,9 +104,7 @@
                               IsChecked="{Binding AutoStart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                               StaysOpenOnClick="True"/>
 
-
-                    <MenuItem Header="Initialize device" Click="InitializeDevice_OnClick" ToolTip="BEWARE: This erases the device firmware.">
-                    </MenuItem>
+                    <MenuItem Header="Initialize device" Click="InitializeDevice_OnClick" ToolTip="BEWARE: This erases the device firmware." />
 
                     <Separator/>
                     
